feat(list-component): get pokemos from api and list them
set updatePartial method for trainerProfileSubject on trainer service and test it

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 
-<body class="mx-4">
+<body class="mx-4 full-height mb-4">
   <app-root></app-root>
 </body>
 
